[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Oswald-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Dead.gd" type="Script" id=2]
[ext_resource path="res://Images/Oceanbg.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="Dead" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Oceanbg" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 304 )
texture = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -100.0
margin_right = 96.0
margin_bottom = 41.5
custom_fonts/font = SubResource( 1 )
text = "You Died"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_right = 75.0
margin_bottom = 47.5
custom_constants/separation = 15

[node name="Retry" type="Button" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Retry"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 150.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="QuitGame" type="Button" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 150.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 3 )
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
